[package]
name = "collar"
version = "1.0.0"
edition = "2024"
authors = ["bend-n <bend.n@outlook.com>"]
license = "MIT"
description = "easy array collection"
repository = "https://github.com/bend-n/collar"
keywords = ["array", "utility", "collect", "iterators"]

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]
